--- a/style/variables.css
+++ b/style/variables.css
@@ -60,7 +60,7 @@ Custom colors
    --hale-light-cyan: #59e1e307;
    --hale-active-cyan: #59e1e350;
 
-   --hale-object-blue: #cdebf7;
+   --hale-object-blue: #296c87;
    --hale-blue: #26bbd9;
 
    --hale-red: #EF5350;
