--- a/style/variables.css
+++ b/style/variables.css
@@ -45,7 +45,7 @@ all of MD as it is not optimized for dense, information rich UIs.
 Custom colors
 */
 
-   --hale-mono: #737f94;
+   --hale-mono: #586c8c;
    --hale-mono-grey: #5c6370;
 
    --hale-bg: #011627;
